[package]
name = "tracing-stackdriver"
version = "0.6.0"
authors = ["Alex Pearson <alex@alexpear.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NAlexPear/tracing-stackdriver"
description = "Stackdriver-compatible tracing layer and event formatter"
keywords = ["tracing", "stackdriver", "logging", "google", "gcp"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[dependencies]
Inflector = "0.11.4"
serde_json = "1.0.87"
tracing-core = "0.1.28"
thiserror = "1.0.37"

[dependencies.http]
optional = true
version = "0.2.8"

[dependencies.opentelemetry]
version = "0.18.0"
optional = true

[dependencies.serde]
features = ["derive"]
version = "1.0.147"

[dependencies.time]
default-features = false
features = ["formatting"]
version = "0.3.17"

[dependencies.tracing-opentelemetry]
version = "0.18.0"
optional = true

[dependencies.tracing-subscriber]
features = ["json"]
version = "0.3.15"

[dependencies.url]
optional = true
version = "2.3.1"

[dependencies.valuable]
optional = true
features = ["derive"]
version = "0.1.0"

[dependencies.valuable-serde]
optional = true
version = "0.1.0"

[dev-dependencies]
lazy_static = "1.4.0"
tracing = "0.1.37"
rand = "0.8.5"

[dev-dependencies.time]
features = ["serde", "serde-well-known", "formatting"]
version = "0.3.17"

[dev-dependencies.opentelemetry]
features = ["testing"]
version = "0.18.0"

[features]
valuable = ["dep:valuable", "valuable-serde", "http", "url"]
opentelemetry = ["dep:opentelemetry", "tracing-opentelemetry"]
